[tool.poetry]
name = "python-miio"
version = "0.5.12"
description = "Python library for interfacing with Xiaomi smart appliances"
authors = ["Teemu R <tpr@iki.fi>"]
repository = "https://github.com/rytilahti/python-miio"
documentation = "https://python-miio.readthedocs.io"
license = "GPL-3.0-only"
readme = "README.rst"
packages = [
  { include = "miio" }
]
keywords = ["xiaomi", "miio", "miot", "smart home"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: System :: Hardware",
  "Topic :: Home Automation"
]

[tool.poetry.scripts]
mirobo = "miio.integrations.vacuum.roborock.vacuum_cli:cli"
miio-extract-tokens = "miio.extract_tokens:main"
miiocli = "miio.cli:create_cli"

[tool.poetry.dependencies]
python = "^3.7"
click = ">=8"
cryptography = ">=35"
construct = "^2.10.56"
zeroconf = "^0"
attrs = "*"
pytz = "*"
appdirs = "^1"
tqdm = "^4"
netifaces = { version = "^0", optional = true }
android_backup = { version = "^0", optional = true }
micloud = { version = "*", optional = true }
importlib_metadata = { version = "^1", markers = "python_version <= '3.7'" }
croniter = ">=1"
defusedxml = "^0"

sphinx = { version = ">=4.2", optional = true }
sphinx_click = { version = "*", optional = true }
sphinxcontrib-apidoc = { version = "^0", optional = true }
sphinx_rtd_theme = { version = "^0", optional = true }
PyYAML = ">=5,<7"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_click", "sphinxcontrib-apidoc", "sphinx_rtd_theme"]

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pytest-cov = "^2"
pytest-mock = "^3"
voluptuous = "^0"
pre-commit = "^2"
doc8 = "^0"
restructuredtext_lint = "^1"
tox = "^3"
isort = "^4"
cffi = "^1"
docformatter = "^1"
mypy = {version = "^0", markers = "platform_python_implementation == 'CPython'"}
coverage = {extras = ["toml"], version = "^6"}

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
forced_separate = "miio.discover"
known_first_party = "miio"
known_third_party = ["appdirs",
  "attr",
  "click",
  "construct",
  "croniter",
  "cryptography",
  "netifaces",
  "pytest",
  "pytz",
  "setuptools",
  "tqdm",
  "zeroconf"
]


[tool.coverage.run]
source = ["miio"]
branch = true
omit = ["miio/*cli.py",
  "miio/extract_tokens.py",
  "miio/tests/*",
  "miio/version.py"
]

[tool.coverage.report]
exclude_lines = [
  # ignore abstract methods
  "raise NotImplementedError",
  "def __repr__"
]

[tool.check-manifest]
ignore = ["devtools/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
