[project]
name = "python-miio"
version = "0.6.0.dev0"
description = "Python library for interfacing with Xiaomi smart appliances"
authors = [{name = "Teemu R", email = "tpr@iki.fi"}]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["xiaomi", "miio", "miot", "smart home"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: System :: Hardware",
  "Topic :: Home Automation",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8",
  "cryptography>=35",
  "construct>=2.10.56,<3",
  "zeroconf>=0,<1",
  "attrs",
  "platformdirs",
  "tqdm>=4,<5",
  "micloud>=0.6",
  "croniter>=1",
  "defusedxml>=0,<1",
  "pydantic>=1,<3",
  "PyYAML>=5,<7",
]

[project.urls]
Repository = "https://github.com/rytilahti/python-miio"
Documentation = "https://python-miio.readthedocs.io"

[project.scripts]
mirobo = "miio.integrations.roborock.vacuum.vacuum_cli:cli"
miio-extract-tokens = "miio.extract_tokens:main"
miiocli = "miio.cli:create_cli"

[project.optional-dependencies]
docs = ["sphinx", "sphinx_click", "sphinxcontrib-apidoc", "sphinx_rtd_theme>=1.3.0", "myst-parser"]
updater = ["netifaces>=0,<1"]
backup_extract = ["android_backup>=0,<1"]
crcmod = ["crcmod>=1.7,<2"]

[dependency-groups]
dev = [
  "pytest>=6.2.5",
  "pytest-cov",
  "pytest-mock",
  "pytest-asyncio",
  "pre-commit",
  "doc8",
  "restructuredtext_lint",
  "tox",
  "isort",
  "cffi",
  "docformatter",
  "mypy; platform_python_implementation == 'CPython'",
  "coverage[toml]",
  "types-attrs",
  "types-PyYAML",
  "types-requests",
  "types-pytz",
  "types-croniter",
  "types-freezegun",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miio"]

[tool.coverage.run]
source = ["miio"]
branch = true
omit = ["miio/*cli.py",
  "miio/extract_tokens.py",
  "miio/tests/*",
  "miio/version.py"
]

[tool.coverage.report]
exclude_lines = [
  # ignore abstract methods
  "raise NotImplementedError",
  "def __repr__"
]

[tool.mypy]
# misc disables "Decorated property not supported", see https://github.com/python/mypy/issues/1362
# annotation-unchecked disables "By default the bodies of untyped functions are not checked"
disable_error_code = "misc,annotation-unchecked"

[tool.doc8]
paths = ["docs"]
# docs/index.rst:7: D000 Error in "include" directive:
# invalid option value: (option: "parser"; value: 'myst_parser.sphinx_')
# Parser "myst_parser.sphinx_" not found. No module named 'myst_parser'.
ignore-path-errors = ["docs/index.rst;D000"]


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["UP", "F", "B", "S", "PT", "I"]
ignore = [
  "PT011",  # pytest.raises() without match= — too many existing cases to fix at once
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101", "S105", "S106", "B018", "B904", "PT009", "PT012", "PT027"]
"miio/tests/**" = ["S101", "S105", "S106", "B018", "B904", "PT009", "PT012", "PT027"]
